css/custom.css
/* Custom styles by India */

/* Team member - cargo */
.cargo-text {
    font-size: 12px;
    line-height: 17px;
    margin-top: 4px;
}

* {
    scroll-behavior: smooth !important;
}

.swiper-slide.incubados {
    margin: 0 20px !important;
    display: flex;
    align-items: center;
    justify-content: center;
}

.swiper-slide.incubados span {
    line-height: 103%;
    font-size: 16px;
    margin-top: 18px;
    max-width: 130px;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 26px;
    color: #353535;
    word-break: keep-all;
}

.swiper-slide.incubados img {
    max-width: 200px;
    max-height: 100px;
}

/* Slide box - rede incubadoras */
.sliding-box-style-02 .sliding-box-item .sliding-box-img {
    border-radius: 14px;
}
.sliding-box-style-02 .sliding-box-item.active .sliding-box-img {
    border-radius: 14px 0 0 14px;
}
.border {
    border: 1px solid #742c2c;
}

header .navbar {
    top: 20px;
}
header .navbar-brand img {
    margin-top: 44px;
}
header .navbar-brand .mobile-logo {
    margin-top: 40px;
}
.footer-link img {
    max-width: 16px;
}

/* Whatsapp */

.btn-whatsapp {
    position: fixed;
    width: 60px;
    height: 60px;
    bottom: 40px;
    right: 40px;
    background-color: #25d366;
    color: #fff;
    border-radius: 50px;
    text-align: center;
    font-size: 30px;
    box-shadow: 1px 1px 2px #888;
    z-index: 1000;
}

.btn-whatsapp img {
    height: 30px;
    margin-top: 14px;
}

